--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <base href="/">
 
-    <title>React App</title>
+    <title>React Chats</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
